main header modify

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li><a href="#">유성구의회</a></li>
               <li><a href="#">평생학습센터&통합도서관</a></li>
               <li><a href="#">동행정복지센터</a></li>
-              <li><a href="#">유성구 홈페이지 더보기</a></li>
+              <li><a href="#"><span></span>유성구 홈페이지 더보기</a></li>
             </ul>
           </div>
         </div>
