스킵메뉴 추가

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     <link rel="stylesheet" href="css/style.css" >
   </head>
   <body>
+    <a href="#main" class="skip_menu">메인화면 바로가기</a>
+    <a href="#pick" class="skip_menu">취향척척 바로가기</a>
+    <a href="#location" class="skip_menu">생생VR 바로가기</a>
+    <a href="#select" class="skip_menu">요기조기 바로가기</a>
+    <a href="#quick" class="skip_menu">공지사항 바로가기</a>
     <div id="wrap">
       <header>
         <div class="header_top">
@@ -258,8 +263,8 @@
           </div>
         </div>
       </header>
-      <section>
-        <h4>메인화면</h4>
+      <section id="main">
+        <h4>천년온천 유성의 도시미학</h4>
         <div id="main">
           <div class="inner">
             <div class="main_text">
@@ -282,7 +287,11 @@
         <div id="quick">
           <div class="inner">quick_inner</div>
         </div>
-      </section>
+      </section><!-- //id="main" -->
+      <section id="pick"></section><!-- //id="pick" -->
+      <section id="location"></section><!-- //id="location" -->
+      <section id="select"></section><!-- //id="select" -->
+      <section id="quick"></section><!-- //id="quick" -->
       <footer><div class="inner">footer_inner</div></footer>
     </div>
   </body>
