메인배경 넣기

--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <!-- 익스호환성 / 익스를 엣지로 렌더링해라(웹문서 표시하는것을 렌더링한다라고함) -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 반응형 / 너비는 디바이스너비에 따라라, 초기화-배율(처음배율은 1배)-글자 -->
     <!-- 모바일에서 글자가 줄어드는 것을 방지함 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 검색로봇이 글어갈수 잇냐 없냐(개방할것인가 안할것인가) -->
-    <meta name="robot" content="index,nofollow" >
+    <meta name="robot" content="index,nofollow" />
     <!-- 검색엔진에 설명글 /검색시에 밑에 나오는 글긔 -->
-    <meta name="description" content="유성문화관광 홈페이지입니다." >
-    <meta name="author" content="김민정" >
+    <meta name="description" content="유성문화관광 홈페이지입니다." />
+    <meta name="author" content="김민정" />
     <!-- 검색 키워드 -->
-    <meta name="keyword" content="유성,유성문화관광,프로젝트" >
+    <meta name="keyword" content="유성,유성문화관광,프로젝트" />
 
-    <meta property="og:title" content="유성문화관광, 프로젝트" >
-    <meta property="og:description" content="김민정의 반응형 프로젝트입니다." >
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" >
-    <meta property="og:image" content="images/og_img.png" >
+    <meta property="og:title" content="유성문화관광, 프로젝트" />
+    <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
+    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
+    <meta property="og:image" content="images/og_img.png" />
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" >
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" >
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" >
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" >
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" >
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" >
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" >
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" >
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" >
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" >
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" >
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" >
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" >
-    <link rel="manifest" href="images/favicon/manifest.json" >
-    <meta name="msapplication-TileColor" content="#ffffff" >
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" >
-    <meta name="theme-color" content="#ffffff" >
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="images/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" href="css/reset.css" >
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <a href="#main" class="skip_menu">메인화면 바로가기</a>
@@ -61,7 +61,9 @@
               <li><a href="#">유성구의회</a></li>
               <li><a href="#">평생학습센터&통합도서관</a></li>
               <li><a href="#">동행정복지센터</a></li>
-              <li><a href="#"><span></span>유성구 홈페이지 더보기</a></li>
+              <li>
+                <a href="#"><span></span>유성구 홈페이지 더보기</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -80,9 +82,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천이란?</a></h3>
@@ -110,9 +111,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">관광TOP10</a></h3>
@@ -139,9 +139,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성! 추천여행</a></h3>
@@ -172,9 +171,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천문화축제</a></h3>
@@ -200,9 +198,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">숙박</a></h3>
@@ -237,9 +234,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!</p>
-                      <p>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" >
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">공지사항</a></h3>
@@ -259,39 +255,33 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" ></a>
+            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
           </div>
         </div>
       </header>
       <section id="main">
-        <h4>천년온천 유성의 도시미학</h4>
-        <div id="main">
-          <div class="inner">
-            <div class="main_text">
-              <p>모이고 떠들고 먹고 즐기는</p>
-              <p>천년온천</p>
-              <p>유성의</p>
-              <p>도시미학</p>
-            </div>
+        <h4>모이고 떠들고 먹고 즐기는<br>천년온천 유성의 도시미학</h4>
+        <div class="inner">
+          <div class="main_text">
+            
           </div>
         </div>
-        <div id="pick">
-          <div class="inner">pick_inner</div>
-        </div>
-        <div id="location">
-          <div class="inner">location_inner</div>
-        </div>
-        <div id="select">
-          <div class="inner">select_inner</div>
-        </div>
-        <div id="quick">
-          <div class="inner">quick_inner</div>
-        </div>
-      </section><!-- //id="main" -->
-      <section id="pick"></section><!-- //id="pick" -->
-      <section id="location"></section><!-- //id="location" -->
-      <section id="select"></section><!-- //id="select" -->
-      <section id="quick"></section><!-- //id="quick" -->
+      </section>
+      <!-- //id="main" -->
+      <section id="pick">
+        <div class="inner">pick_inner</div>
+      </section>
+      <!-- //id="pick" -->
+      <section id="location">
+        <div class="inner">location_inner</div>
+      </section>
+      <!-- //id="location" -->
+      <section id="select">
+        <div class="inner">select_inner</div>
+      </section>
+      <!-- //id="select" -->
+      <section id="quick"><div class="inner">quick_inner</div></section>
+      <!-- //id="quick" -->
       <footer><div class="inner">footer_inner</div></footer>
     </div>
   </body>
