메인배너 작성

--- a/index.html
+++ b/index.html
@@ -260,10 +260,18 @@
         </div>
       </header>
       <section id="main">
-        <h4>모이고 떠들고 먹고 즐기는<br>천년온천 유성의 도시미학</h4>
+        <h4>모이고 떠들고 먹고 즐기는<p><span class="ir_pm tit1">천년온천</span> 유성의 <span class="ir_pm tit2">도시미학</span></p></h4>
         <div class="inner">
-          <div class="main_text">
-            
+            <div class="slider"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너"></div>
+        </div>
+        <div class="main_btn">
+          <div class="btn_right">
+            <div class="btn_title1"><img src="images/mvisual_btn1.png" alt="과학관광 코스 모달"></div>
+            <img src="images/mvisual_btn1_bg.png" alt="">
+          </div>
+          <div class="btn_left">
+            <div class="btn_title2"><img src="images/mvisual_btn2.png" alt="과학관광 코스 모달"></div>
+            <img src="images/mvisual_btn2_bg.png" alt="">
           </div>
         </div>
       </section>
