--- a/index.html
+++ b/index.html
@@ -267,18 +267,18 @@
             <div class="slider_img">
               <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
             </div>
-            <div class="subject">
-              <p>
+            <!-- <div class="subject">
+              <p class="S_Core">
                 <b>관광 TOP10</b>
                 유성온천문화축제
               </p>
               <div class="progress"></div>
               <p>10/10</p>
-              <div class="main_prev">이전슬라이더</div>
-              <div class="main_stop">멈추기</div>
-              <div class="main_mext">다음슬라이더</div>
-              <div class="main_more">더보기</div>
-            </div>
+              <div class="main_prev ir_pm">이전슬라이더</div>
+              <div class="main_stop ir_pm">멈추기</div>
+              <div class="main_mext ir_pm">다음슬라이더</div>
+              <div class="main_more ir_pm">더보기</div>
+            </div> -->
           </div>
         </div>
         <div class="main_btn">
@@ -295,22 +295,81 @@
       <!-- //id="main" -->
 
       <section id="pick">
-        <h4>pick_inner location_inner select_inner quick_inner footer_inner</h4>
-        <div class="inner"></div>
+        <h4 class="title S_Core">취향<span>척척</span></h4>
+        <p>여행객들을 위한 유성구만의 멋진 여행코스를 추천합니다.</p>
+        <div class="inner">
+          <div class="pick_btn">
+            <ul class="tab df">
+              <li class="tab1"><a href="#">유성!추천여행</a></li>
+              <li class="tab2"><a href="#">도보·자전거</a></li>
+              <li class="tab3"><a href="#">어린이관광</a></li>
+              <li class="tab4"><a href="#">즐거운 쇼핑</a></li>
+            </ul>
+          </div>
+          <ul class="df">
+            <li>
+              <a href="#">
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="txt">
+                  <b> 우리의 추억, 대전 엑스포 </b>
+                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="txt">
+                  <b> 우리의 추억, 대전 엑스포 </b>
+                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="txt">
+                  <b> 우리의 추억, 대전 엑스포 </b>
+                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="txt">
+                  <b> 우리의 추억, 대전 엑스포 </b>
+                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="thumb"><img src="images/mcont1_img01.jpg" alt=""></div>
+                <div class="txt">
+                  <b> 우리의 추억, 대전 엑스포 </b>
+                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- //id="pick" -->
       <section id="location">
-        <h4>pick_inner location_inner select_inner quick_inner footer_inner</h4>
+        <h4 class="title S_Core">생생<span>VR</span></h4>
+        <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
         <div class="inner"></div>
       </section>
       <!-- //id="location" -->
       <section id="select">
-        <h4>pick_inner location_inner select_inner quick_inner footer_inner</h4>
+        <h4 class="title S_Core">요기<span>조기</span></h4>
+        <p>맛있는 식도락 여행부터 맞춤관광까지 하루 더 머물고 싶은 유성구</p>
         <div class="inner"></div>
       </section>
       <!-- //id="select" -->
       <section id="quick">
-        <h4>pick_inner location_inner select_inner quick_inner footer_inner</h4>
+        <h4>quick</h4>
         <div class="inner"></div>
       </section>
       <!-- //id="quick" -->
