--- a/index.html
+++ b/index.html
@@ -489,7 +489,9 @@
         </div>
       </section>
       <!-- //id="location" -->
-      <section id="select">
+      <section id="quick">
+        <div class="bg1"></div>
+        <div class="bg2"></div>
         <h4 class="title S_Core">요기<span>조기</span></h4>
         <p>맛있는 식도락 여행부터 맞춤관광까지 하루 더 머물고 싶은 유성구</p>
         <div class="inner">
@@ -500,7 +502,8 @@
                 유성구에서 어떤 여행을<br />
                 기대하고 계시나요?
               </p>
-              <div class="select_wrap">
+              <div class="select_wrap df">
+                <div class="icon1"></div>
                 <select>
                   <option value="">언제?</option>
                   <option value="봄">봄</option>
@@ -509,7 +512,8 @@
                   <option value="겨율">겨율</option>
                 </select>
               </div>
-              <div class="select_wrap">
+              <div class="select_wrap df">
+                <div class="icon2"></div>
                 <select>
                   <option value="">누구와?</option>
                   <option value="혼자">혼자</option>
@@ -519,17 +523,21 @@
                   <option value="학교/단체">학교/단체</option>
                 </select>
               </div>
-              <select>
-                <option value="">무엇을?</option>
-                <option value="핫플레이스">핫플레이스</option>
-                <option value="온천여행">온천여행</option>
-                <option value="체험">체험</option>
-                <option value="전시">전시</option>
-                <option value="자연산책">자연산책</option>
-                <option value="도시산책">도시산책</option>
-                <option value="레저">레저</option>
-                <option value="축제/행사">축제/행사</option>
-              </select>
+              <div class="select_wrap df">
+                <div class="icon3"></div>
+                <select>
+                  <option value="">무엇을?</option>
+                  <option value="핫플레이스">핫플레이스</option>
+                  <option value="온천여행">온천여행</option>
+                  <option value="체험">체험</option>
+                  <option value="전시">전시</option>
+                  <option value="자연산책">자연산책</option>
+                  <option value="도시산책">도시산책</option>
+                  <option value="레저">레저</option>
+                  <option value="축제/행사">축제/행사</option>
+                </select>
+              </div>
+              <div class="chose"><a href="#">맞춤관광 추천받기</a></div>
             </div>
             <ul class="n2 df">
               <li>
@@ -571,18 +579,92 @@
             </ul>
           </div>
         </div>
-      </section>
-      <!-- //id="select" -->
-      <section id="quick">
-        <h4>quick</h4>
+
         <div class="inner">
           <div class="notice">
             <h5>공지사항</h5>
+            <ul class="df">
+              <li>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="icon_link">
+            <ul class="df">
+              <li>
+                <a href="#">
+                  <span class="site_icon1"></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="site_icon2"></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="site_icon4"></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="site_icon5"></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span></span>
+                  <p>관광안내소</p>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
-      <!-- //id="quick" -->
-      <footer><div class="inner"></div></footer>
+      <!-- //id="select" -->
+      <footer>
+        <div class="inner">
+          <div class="foot_logo">
+            <img src="images/footlogo.png" alt="" />
+          </div>
+          <ul class="df">
+            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#">저작권정책</a></li>
+            <li><a href="#">사이트맵</a></li>
+            <li><a href="#">찾아오시는길</a></li>
+          </ul>
+          <address>
+            (우 00000) 대전광역시 유성구 대학로 211전화 : 042-000-0000 |
+            Copyright © 2022 KMJ. ALL RIGHTS RESERVED.
+          </address>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
