--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
         <div class="inner">
           <div class="vr df">
             <div class="vr_slider pr">
+              <div class="vr_img">
+                <img src="images/300_TR_202105110255503251.jpg" alt="">
+              </div>
               <div class="txt">
                 <b><span>VR사이버투어</span> 유림공원</b>
                 <p>산책하기 좋은 명품 유림공원, 추천! 언택트 관광지</p>
