--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
         <div class="inner">
           <div class="pick_btn">
             <ul class="tab df">
-              <li class="tab1"><a href="#">유성!추천여행</a></li>
-              <li class="tab2"><a href="#">도보·자전거</a></li>
-              <li class="tab3"><a href="#">어린이관광</a></li>
-              <li class="tab4"><a href="#">즐거운 쇼핑</a></li>
+              <li class="tab1"><a href="#"><span></span>유성!추천여행</a></li>
+              <li class="tab2"><a href="#"><span></span>도보·자전거</a></li>
+              <li class="tab3"><a href="#"><span></span>어린이관광</a></li>
+              <li class="tab4"><a href="#"><span></span>즐거운 쇼핑</a></li>
             </ul>
           </div>
           <ul class="df">
@@ -394,8 +394,8 @@
                 <b><span>VR사이버투어</span> 유림공원</b>
                 <p>산책하기 좋은 명품 유림공원, 추천! 언택트 관광지</p>
                 <ul class="list">
-                  <li><a href="#">대전 유성구 어은로 27</a></li>
-                  <li><a href="#">042-611-2445</a></li>
+                  <li><a href="#"><span></span>대전 유성구 어은로 27</a></li>
+                  <li><a href="#"><span></span>042-611-2445</a></li>
                 </ul>
               </div>
 
@@ -521,38 +521,38 @@
               </li>
               <li>
                 <a href="#">
-                  <span></span>
-                  <p>관광안내소</p>
+                  <span class="site_icon2"></span>
+                  <p>관광지도</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <span class="site_icon2"></span>
-                  <p>관광안내소</p>
+                  <span class="site_icon3"></span>
+                  <p>교통정보</p>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <span class="site_icon4"></span>
-                  <p>관광안내소</p>
+                  <p>대전시티투어</p>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <span class="site_icon5"></span>
-                  <p>관광안내소</p>
+                  <p>체육시설</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <span></span>
-                  <p>관광안내소</p>
+                  <span class="site_icon6"></span>
+                  <p>전국관광안내 1330</p>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <span></span>
-                  <p>관광안내소</p>
+                  <span class="site_icon7"></span>
+                  <p>관광자료 신청</p>
                 </a>
               </li>
             </ul>
