--- a/index.html
+++ b/index.html
@@ -293,17 +293,23 @@
           </div>
         </div>
         <div class="main_btn">
-          <div class="btn_right">
-            <div class="btn_title1">
+          <div class="btn_left">
+            <button>
+              <b>과학</b>관광
+            </button>
+            <!-- <div class="btn_title1">
               <img src="images/mvisual_btn1.png" alt="과학관광 코스 모달">
             </div>
-            <img src="images/mvisual_btn1_bg.png" alt="">
+            <img src="images/mvisual_btn1_bg.png" alt=""> -->
           </div>
-          <div class="btn_left">
-            <div class="btn_title2">
+          <div class="btn_right">
+            <button>
+              <b>온천</b>관광
+            </button>
+            <!-- <div class="btn_title2">
               <img src="images/mvisual_btn2.png" alt="과학관광 코스 모달">
             </div>
-            <img src="images/mvisual_btn2_bg.png" alt="">
+            <img src="images/mvisual_btn2_bg.png" alt=""> -->
           </div>
         </div>
       </section>
