--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <a href="#location" class="skip_menu">생생VR 바로가기</a>
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
+    <div id="layer">
+      <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.
+        구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
+        <button>닫기</button>
+    </div>
+
     <div id="wrap">
       <header>
         <div class="header_top">
@@ -581,5 +587,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
