--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -441,6 +440,11 @@
       <section id="quick">
         <div class="bg1"></div>
         <div class="bg2"></div>
+        <div class="bg3">
+          <span class="men1"></span>
+          <span class="men2"></span>
+        </div>
+        <div class="bg4"></div>
         <h4 class="title">요기<span>조기</span></h4>
         <p>맛있는 식도락 여행부터 맞춤관광까지 하루 더 머물고 싶은 유성구</p>
         <div class="inner">
@@ -486,7 +490,7 @@
                   <option value="축제/행사">축제/행사</option>
                 </select>
               </div>
-              <div class="chose"><a href="#">맞춤관광 추천받기</a></div>
+             <a href="#">맞춤관광 추천받기</a>
             </div>
             <ul class="n2 df">
               <li>
@@ -589,12 +593,15 @@
             <img src="images/footlogo.png" alt="">
           </div>
           <ul class="df">
-            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#"><b>개인정보처리방침</b></a></li>
             <li><a href="#">저작권정책</a></li>
             <li><a href="#">사이트맵</a></li>
             <li><a href="#">찾아오시는길</a></li>
           </ul>
-          <address>(우 00000) 대전광역시 유성구 대학로 211전화 : 042-000-0000 | Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</address>
+          <div class="df">
+            <address>(우 12345) 서울특별시 동대문구 삼성로 999 <span>전화 : 042-1885-4875</span></address>
+            <p>Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</p>
+          </div>
         </div>
       </footer>
     </div>
